fix:change all align-items:start into align-items:flex-start

--- a/styles/components/layout/Navbar.module.css
+++ b/styles/components/layout/Navbar.module.css
@@ -93,7 +93,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
   }
 
   .menuItemContainer {
