--- a/styles/components/pages/home/PerPageSlider.module.css
+++ b/styles/components/pages/home/PerPageSlider.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: start;
+  align-items: flex-start;
   border-bottom: 0.25px solid rgba(255, 255, 255, 0.1);
 }
 
