--- a/styles/components/pages/search/SearchCard.module.css
+++ b/styles/components/pages/search/SearchCard.module.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: start;
+  align-items: flex-start;
 }
 .cardTitle {
   font-style: normal;
