--- a/styles/components/pages/shared/Followers.module.css
+++ b/styles/components/pages/shared/Followers.module.css
@@ -7,7 +7,7 @@
   height:calc(65px - 2px);
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   padding-top: 36px;
   border-bottom: 2px solid #1F1F1F;
   position: relative;
@@ -84,7 +84,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   padding-left: 15px;
 }
 
